# CHIPythonCourse

FlaskProject1/: .gitignore  .pylintrc  Dockerfile  app.py  blueprints_config.py  config.py  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
FlaskProject1/app/: __init__.py
FlaskProject1/app/api/: __init__.py
FlaskProject1/app/api/healthcheck/: __init__.py  healthcheck.py  view.py
FlaskProject1/app/api/swagger/: openapi.yaml
FlaskProject1/app/api/v1/: __init__.py
FlaskProject1/app/api/v1/article/: view.py
FlaskProject1/app/api/v1/articles/: view.py
FlaskProject1/app/api/v1/role/: __init__.py  view.py
FlaskProject1/app/api/v1/user/: view.py
FlaskProject1/app/api/v1/users/: view.py
FlaskProject1/app/api/v1/users/documentation/: users.yaml
FlaskProject1/app/api/version_info/: __init__.py  version_info.py  view.py
FlaskProject1/app/db_operatios/: arcticle_service.py  user_service.py
FlaskProject1/app/models/: __init__.py  article.py  role.py  user.py
FlaskProject1/app/resources/: __init__.py  api_config.py  component.py  logger.py  marshmallow.py  project_constants.py  rest_api.py  rest_api_server.py  server.py  swagger.py
FlaskProject1/app/resources/config_manager/: __init__.py  config_manager.py
FlaskProject1/app/resources/config_manager/config_manager_types/: __init__.py  base_config_manager.py  cli_manager.py  dotenv_manager.py
FlaskProject1/app/schemas/: __init__.py  article_schemas.py  role_schemas.py  schemas.py  user_schemas.py
FlaskProject1/seed/: seed.py
FlaskRest1/: Dockerfile  blueprints_config.py  config.py  (+4 more)
(+31 files in other folders)
